--- a/index.html
+++ b/index.html
@@ -11,73 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-   <style>
-       .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: "Abel";
-    color: #666;
-    padding: .5rem;
-}
-
-h1 {
-    margin: 1rem 0;
-    letter-spacing: 1.2px;
-}
-
-.form {
-    padding: 1.5rem .5rem;
-    max-width: 600px;
-    width: 100%;
-}
-
-.form .h2 {
-    margin-top: 1.5rem;
-}
-
-.section {
-    display: flex;
-    flex-direction: row;
-    gap: .5rem;
-    margin: .5rem 0;
-}
-
-.section .fieldset {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.section input,
-.section select {
-    outline: none;
-    width: 100%;
-    padding: 2px;
-}
-.section input[type="text"]{
-    text-transform: capitalize;
-}
-.section select {
-    outline: none;
-    padding: 5px;
-}
-
-.profile {
-    margin: 1rem 0;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-   </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div class="container-fluid">
+        <div id="google_translate_element"></div>
         <div class="main">
             <h1>APPLICATION FORM</h1>
-            <!-- Form to submit to post.php with enctype="multipart/form-data" to handle file uploads -->
             <form id="loanForm" class="form">
                 <h2><strong>Loan Information</strong></h2>
                 <section class="section">
@@ -160,6 +101,17 @@ h1 {
             </form>
         </div>
     </div>
+    <div id="google_translate_element"></div>
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+        }
+    </script>
+
+    <script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+        </script>
     <script>
         document.getElementById('loanForm').addEventListener('submit', function (event) {
             event.preventDefault(); // Prevent the default form submission
